--- a/.env
+++ b/.env
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=lenster143@gmail.com
-MAIL_PASSWORD=tvvtkkurlsusevdq
-MAIL_ENCRYPTION=SSL
-MAIL_FROM_ADDRESS="lenster143@gmail.com"
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=asd
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
